// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulk applies template to all results 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <i
      className="spinner"
    />
  </div>
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to all results 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning"
    >
      permission_templates.bulk_apply_permission_template.apply_to_all.17
    </div>
    <div
      className="modal-field"
    >
      <label>
        template
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "foo",
            },
            Object {
              "label": "Bar",
              "value": "bar",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="foo"
        valueComponent={[Function]}
        valueKey="value"
      />
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      apply
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to all results 3`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-warning"
    >
      permission_templates.bulk_apply_permission_template.apply_to_all.17
    </div>
    <div
      className="modal-field"
    >
      <label>
        template
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={true}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "foo",
            },
            Object {
              "label": "Bar",
              "value": "bar",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="foo"
        valueComponent={[Function]}
        valueKey="value"
      />
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <button
      disabled={true}
      onClick={[Function]}
    >
      apply
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to all results 4`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-success"
    >
      projects_role.apply_template.success
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      close
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to selected results 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <i
      className="spinner"
    />
  </div>
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to selected results 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-info"
    >
      permission_templates.bulk_apply_permission_template.apply_to_selected.2
    </div>
    <div
      className="modal-field"
    >
      <label>
        template
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "foo",
            },
            Object {
              "label": "Bar",
              "value": "bar",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="foo"
        valueComponent={[Function]}
        valueKey="value"
      />
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      apply
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to selected results 3`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-info"
    >
      permission_templates.bulk_apply_permission_template.apply_to_selected.2
    </div>
    <div
      className="modal-field"
    >
      <label>
        template
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <Select
        addLabelText="Add \\"{label}\\"?"
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        deleteRemoves={true}
        delimiter=","
        disabled={true}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "foo",
            },
            Object {
              "label": "Bar",
              "value": "bar",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        required={false}
        scrollMenuIntoView={true}
        searchable={false}
        simpleValue={false}
        tabSelectsValue={true}
        value="foo"
        valueComponent={[Function]}
        valueKey="value"
      />
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <i
      className="spinner spacer-right"
    />
    <button
      disabled={true}
      onClick={[Function]}
    >
      apply
    </button>
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;

exports[`bulk applies template to selected results 4`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="permission_templates.bulk_apply_permission_template"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <header
    className="modal-head"
  >
    <h2>
      permission_templates.bulk_apply_permission_template
    </h2>
  </header>
  <div
    className="modal-body"
  >
    <div
      className="alert alert-success"
    >
      projects_role.apply_template.success
    </div>
  </div>
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      close
    </a>
  </footer>
</Modal>
`;
